<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


  <ImageView
      android:id="@+id/imageView"
      android:layout_width="140dp"
      android:layout_height="140dp"
      android:layout_marginTop="100dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/photo"
      android:contentDescription="@string/todo" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_marginStart="68dp"
      android:layout_marginTop="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:srcCompat="@drawable/phone"
      android:contentDescription="@string/todo" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_marginStart="68dp"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"
      app:srcCompat="@drawable/password"
      android:contentDescription="@string/todo"/>

<!--  输入账号-->
  <EditText
      android:id="@+id/editText_Account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="28dp"
      android:ems="10"
      android:hint="@string/account"
      android:inputType="textPersonName"
      app:layout_constraintStart_toEndOf="@+id/imageView2"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      android:autofillHints="" />

<!--  输入密码-->
  <EditText
      android:id="@+id/editText_Password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginTop="20dp"
      android:hint="@string/password"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintStart_toEndOf="@+id/imageView3"
      app:layout_constraintTop_toBottomOf="@+id/editText_Account"
      android:autofillHints="" />

<!--登陆，成功后跳转好友页-->
  <Button
      android:id="@+id/but_login"
      android:layout_width="140dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText_Password" />

  <!--跳转注册页面-->
  <Button
      android:id="@+id/but_skip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="208dp"
      android:layout_marginBottom="116dp"
      android:backgroundTint="@color/white"
      android:text="@string/没有账号立即注册"
      android:textColor="#0066FF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>